================================================

* Fixed #1673 - CMake on Windows put PDB in wrong directory.

* Fixed #1723 - Family is not set when resolving NIC on Android.

* Fixed #1608 - Windows 7 TCP slow start issue.

* Fixed #1806 - uninitialised read in curve getsockopt.

* Fixed #1807 - build broken with GCC 6.

* Fixed #1831 - potential assertion failure with latest libsodium.


0MQ version 4.1.4 stable, released on 2015/12/18
================================================

* Fixed #1315 - socket monitor hangs if bind/setsockopt failed.

* Fixed #1399 - assertion failure in tcp.cpp after network reconnect.

* Fixed #1632 - build failure using latest libsodium.

* Fixed #1644 - assertion failure in msg.cpp:390 on STREAM sockets.

* Fixed #1661 - does not handle IPv6 link local addresses.


0MQ version 4.1.3 stable, released on 2015/08/17
================================================

* Fixed #1532 - getsockopt ZMQ_RCVMORE now resets all bits instead of only 32

* Fixed #1445 - zmq::socket_base_t::connect fails on tcp ipv6 address


0MQ version 4.1.2 stable, released on 2015/06/15
================================================

* Added explicit reference to static link exception in every source file.

* Bumped ABI version to 5:0:0 since 4.1.x changed the ABI.

* Fixed STDINT event interface macros to work with CZMQ 3.0.

* Fixed installation of man pages when BUILD_DOC is not set.

* Fixed #1428 - regression on single-socket proxies.


0MQ version 4.1.1 stable, released on 2015/06/02
================================================

* Fixed #1208 - fix recursion in automake packaging.

* Fixed #1224 - crash when processing empty unsubscribe message.

* Fixed #1213 - properties files were missing from source packages.

* Fixed #1273 - V3 protocol handler vulnerable to downgrade attacks.

* Fixed #1347 - lack way to get peer address.

* Fixed #1362 - SUB socket sometimes fails to resubscribe properly.
