@@ -1,6 +1,16 @@
 #ifndef TWEETNACL_BASE_H
 #define TWEETNACL_BASE_H
 
+/*
+    Disable warnings for this source only, rather than for the whole
+    codebase when building with C99 or with Microsoft's compiler
+*/
+#if defined __GNUC__ && __STDC_VERSION__ < 201112L
+#   pragma GCC diagnostic ignored "-Wsign-compare"
+#elif defined _MSC_VER
+#   pragma warning (disable:4018 4244 4146)
+#endif
+
 /* the original file seems to be a compability layer for NaCL */
 
 /* This here is for direct tweetnacl usage */ 
